Moving to geotools-derived JTS version